--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "turbo next:dev convex:dev",
+    "next:dev": "next dev --turbopack",
+    "convex:dev": "bunx convex dev",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
+    "check-types": "tsc --noEmit",
     "format": "biome format --write"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.6.0-canary.10"
+    "@clerk/nextjs": "^6.32.2-canary.v20250917172254",
+    "convex": "^1.27.0",
+    "execa": "^9.6.0",
+    "ink": "^6.3.0",
+    "lucide-react": "^0.544.0",
+    "next": "15.6.0-canary.10",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.1",
+    "react-dom": "19.1.1",
+    "svix": "^1.76.1",
+    "turbo": "^2.5.6",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -22,5 +34,6 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "@biomejs/biome": "2.2.0"
-  }
+  },
+  "packageManager": "bun@1.2.2"
 }
