feat: implement comprehensive billing system with Polar integration
- Add billing management features including subscriptions, invoices, and usage tracking
- Create administrative tools for managing billing operations
- Implement webhook handling for Polar events
- Enhance user management with billing integration
- Introduce testing scripts for end-to-end billing system validation
- Update environment configuration and documentation for setup guidance
- Add new components for billing dashboard and user interface

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,117 @@
-# Convex
+# ====================================
+# ENVIRONMENT VARIABLES SETUP GUIDE
+# ====================================
+# Copy this file to .env.local for Next.js local development:
+#   cp .env.example .env.local
+#
+# For production, add these variables to:
+# 1. Vercel/Netlify: Project Settings > Environment Variables
+# 2. Convex Dashboard: Settings > Environment Variables (for CLERK_JWT_ISSUER_DOMAIN, CLERK_WEBHOOK_SECRET, POLAR_ORGANIZATION_TOKEN, POLAR_WEBHOOK_SECRET)
+
+# ====================================
+# CONVEX CONFIGURATION
+# ====================================
+# Get these from: https://dashboard.convex.dev
+# 1. Select your project
+# 2. Go to Settings > URL & Deploy Key
+# 3. Copy the Deployment URL and extract the deployment name
 CONVEX_DEPLOYMENT=dev:nextjs-convex-clerk-starter-kit
 NEXT_PUBLIC_CONVEX_URL=https://nextjs-convex-clerk-starter-kit.convex.cloud
-CLERK_JWT_ISSUER_DOMAIN=https://nextjs-convex-clerk-starter-kit.clerk.accounts.dev
 
-# Clerk
-CLERK_SECRET_KEY=
-CLERK_PUBLISHABLE_KEY=
+# ====================================
+# CLERK AUTHENTICATION
+# ====================================
+# Get these from: https://dashboard.clerk.com
+# 1. Select your application
+# 2. Go to API Keys (left sidebar)
+# 3. Copy Publishable key and Secret key
+CLERK_SECRET_KEY=sk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+CLERK_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+# Clerk JWT Template for Convex
+# 1. Go to Clerk Dashboard > JWT Templates
+# 2. Click "New template" and select "Convex"
+# 3. Copy the Issuer URL (format: https://your-app.clerk.accounts.dev)
+CLERK_JWT_ISSUER_DOMAIN=https://your-app.clerk.accounts.dev
+
+# Clerk Webhook Secret (for user sync)
+# 1. Go to Clerk Dashboard > Webhooks
+# 2. Click "Add Endpoint"
+# 3. Set URL to: https://your-deployment.convex.site/clerk-users-webhook
+#    (Get your Convex HTTP URL from Convex Dashboard > Settings > URL & Deploy Key > HTTP Actions URL)
+# 4. Select events: user.created, user.updated, user.deleted
+# 5. After creating, copy the Signing Secret
+CLERK_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# ====================================
+# POLAR BILLING
+# ====================================
+# Get these from: https://dashboard.polar.sh or https://sandbox.polar.sh
+# 1. Sign in and select/create your organization
+# 2. Go to Settings > Access Tokens
+# 3. Create a new token with appropriate scopes
+POLAR_ORGANIZATION_TOKEN=polar_org_token_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Polar Webhook Secret
+# 1. Go to Polar Dashboard > Settings > Webhooks
+# 2. Click "Create Webhook"
+# 3. Set Endpoint URL to: https://your-deployment.convex.site/polar/webhook
+#    (Get your Convex HTTP URL from Convex Dashboard > Settings > URL & Deploy Key > HTTP Actions URL)
+# 4. Select events: All events or specific ones (subscription.*, checkout.*, order.*, etc.)
+# 5. After creating, copy the Secret
+POLAR_WEBHOOK_SECRET=whsec_polar_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Polar Environment
+# Use "sandbox" for development/testing, "production" for live
+POLAR_SERVER=sandbox
+
+# ====================================
+# APPLICATION URLs
+# ====================================
+# Your application URL (update for production)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# ====================================
+# WHERE TO SET THESE VARIABLES
+# ====================================
+# LOCAL DEVELOPMENT:
+#   - Copy to .env.local (Next.js will read from this file)
+#   - Never commit .env.local to git
+#
+# CONVEX DASHBOARD (Required for Convex functions):
+#   - Go to: https://dashboard.convex.dev
+#   - Select your project > Settings > Environment Variables
+#   - Add these variables:
+#     * CLERK_JWT_ISSUER_DOMAIN
+#     * CLERK_WEBHOOK_SECRET  
+#     * POLAR_ORGANIZATION_TOKEN
+#     * POLAR_WEBHOOK_SECRET
+#     * POLAR_SERVER
+#
+# VERCEL/PRODUCTION:
+#   - Go to your Vercel project settings
+#   - Environment Variables section
+#   - Add all variables for production environment
+#
+# ====================================
+# WEBHOOK URLs FOR YOUR REFERENCE
+# ====================================
+# After deploying to Convex, your webhook URLs will be:
+# - Clerk Webhook: https://[your-deployment].convex.site/clerk-users-webhook
+# - Polar Webhook: https://[your-deployment].convex.site/polar/webhook
+#
+# To find your Convex HTTP URL:
+# 1. Go to Convex Dashboard
+# 2. Select your project
+# 3. Go to Settings > URL & Deploy Key
+# 4. Look for "HTTP Actions" section
+# 5. Copy the URL (format: https://[your-deployment].convex.site)
+#
+# Test webhooks locally with ngrok:
+# 1. Install ngrok: https://ngrok.com
+# 2. Run: npx convex dev --run-action
+# 3. In another terminal: ngrok http 3210
+# 4. Use the ngrok URL for webhook endpoints during development
