--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "start": "next start",
     "lint": "biome check",
     "check-types": "tsc --noEmit",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "test:billing": "./scripts/test-billing-e2e.sh",
+    "test:billing:webhooks": "./scripts/test-billing-e2e.sh --webhooks",
+    "test:billing:full": "bunx tsx scripts/test-billing-system.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.32.2-canary.v20250917172254",
+    "@convex-dev/polar": "^0.6.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.27.0",
+    "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "execa": "^9.6.0",
     "ink": "^6.3.0",
     "lucide-react": "^0.544.0",
@@ -23,17 +31,21 @@
     "react": "^19.1.1",
     "react-dom": "19.1.1",
     "svix": "^1.76.1",
+    "tailwind-merge": "^3.3.1",
     "turbo": "^2.5.6",
     "zod": "^4.1.9"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
+    "chalk": "^5.6.2",
     "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5"
   },
   "packageManager": "bun@1.2.2"
 }
